--- a/calculator/index.html
+++ b/calculator/index.html
@@ -7,11 +7,15 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>People Entered</h1>
-    <h2 id="count-el">0</h2>
-    <button onclick="increment()">Increment</button>
-    <button onclick="saveCount()">Save</button>
-    <p id="save-el">Previous Count :</p>
+    <span id="num1-el"></span>
+    <span id="num2-el"></span>
+
+    <br />
+    <button onclick="add()">Add</button>
+    <button onclick="subtract()">Subtract</button>
+    <button onclick="multiply()">Multiply</button>
+    <button onclick="divide()">Divide</button>
+    <p id="sum-all">sum:</p>
     <script src="index.js"></script>
   </body>
 </html>
